--- a/templates/student_housing_portal.html
+++ b/templates/student_housing_portal.html
@@ -21,6 +21,7 @@
                     <button type="submit">Submit Application</button>
                 </form>
             {% endif %}
+            <a href="{{ url_for('housing_availability') }}" class="link-button">View Housing Availability</a>
         </div>
     </div>
 </body>
