--- a/static/styles.css
+++ b/static/styles.css
@@ -96,3 +96,17 @@ button {
 button:hover {
     color: green;
 }
+
+.link-button {
+    display: inline-block;
+    margin-top: 20px;
+    background-color: #4caf50;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.link-button:hover {
+    background-color: #45a049;
+}
