Added Logout Buttons

--- a/templates/student_housing_portal.html
+++ b/templates/student_housing_portal.html
@@ -8,6 +8,11 @@
 <body>
     <div class="container">
         <div class="header">Housing Application Portal</div>
+        <div class="logout">
+            <form action="{{ url_for('logout') }}" method="get">
+                <button type="submit" class="logout-button">Logout</button>
+            </form>
+            </div>
         <div class="content">
             {% if application_info %}
                 <p><strong>Application Status:</strong> {{ application_info['status'] }}</p>
