--- a/templates/staff_application_portal.html
+++ b/templates/staff_application_portal.html
@@ -8,6 +8,11 @@
 <body>
     <div class="container">
         <div class="header">Staff Application Portal</div>
+        <div class="logout">
+            <form action="{{ url_for('logout') }}" method="get">
+                <button type="submit" class="logout-button">Logout</button>
+            </form>
+        </div>
         <div class="content">
             <h3>Application List:</h3>
             <table>
