--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,17 @@
 <body>
     <div class="container">
         <div class="header">Sign In</div>
+
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <ul class="flashes">
+                {% for category, message in messages %}
+                    <li style="color:Tomato;" class="{{ category }}">{{ message }}</li>
+                {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+
         <div class="form-box">
             <form method="post">
                 <div class="form-section">
